header, lightbox & z-index tweaks removed box-shadow from header adjusted animations of backdrop when entering/exiting lightbox fixed z-index numbers of header and lightbox items

--- a/Gallery.UI/gallery/src/index.css
+++ b/Gallery.UI/gallery/src/index.css
@@ -13,8 +13,18 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+
+  /* dölj scrollbar*/
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none; 
   
 }
+  /* dölj scrollbar*/
+:root::-webkit-scrollbar {
+    display:none;
+}
+
 * {
     margin:0;
     padding:0;
@@ -282,7 +292,8 @@ header a:active, .logo:active, .burger-btn:active{
 
 
 .collection-container{
-    padding-top:0.5rem;
+    /* för box-shadow-grejen*/
+    /* padding-top:0.5rem; */
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -327,7 +338,7 @@ header a:active, .logo:active, .burger-btn:active{
 
 
 #lightbox {
-    z-index: 3;
+    z-index: 4;
     width: 100%;
     height: 100%;
     max-width: inherit;
@@ -340,7 +351,7 @@ header a:active, .logo:active, .burger-btn:active{
     width: 100%;
     height: 100%;
     cursor: pointer;
-    z-index: 2;
+    z-index: 3;
 }
 
 .stop-scrolling {
@@ -356,10 +367,14 @@ header a:active, .logo:active, .burger-btn:active{
     object-fit: cover;
     max-width: inherit;
     
-    z-index: 3;
+    z-index: 4;
     top:50%;
     left:50%;
+
+
+    overflow: auto;
 }
+
 .lightbox-info{
     position: fixed;
     display: flex;
@@ -369,7 +384,7 @@ header a:active, .logo:active, .burger-btn:active{
     left:0;
     justify-content: center;
     align-items: center;
-    z-index: 4;
+    z-index: 5;
 }
 .lightbox-image-info{
     display: flex;
@@ -404,7 +419,7 @@ header a:active, .logo:active, .burger-btn:active{
     
     background: none;
     position: fixed;
-    z-index: 4;
+    z-index: 5;
     color:rgb(255, 255, 255);
     transition: all ease 0.2s;
     padding: 0;
@@ -473,7 +488,7 @@ header a:active, .logo:active, .burger-btn:active{
     header {
         justify-content: space-between;
         overflow: hidden;
-        z-index:2;
+        z-index:3;
         top:0;
         position: sticky;
 
@@ -511,15 +526,15 @@ header a:active, .logo:active, .burger-btn:active{
 
 .fadeInFilter {
     animation-name: fadeInFilter;
-    animation-duration: 0.1s;
+    animation-duration: 0.15s;
     animation-iteration-count: 1;
-    animation-timing-function: ease-out;
+    animation-timing-function: ease-in-out;
 }
 .fadeOutFilter {
     animation-name: fadeOutFilter;
-    animation-duration: 0.15s;
+    animation-duration: 0.17s;
     animation-iteration-count: 1;
-    animation-timing-function: ease-in;
+    animation-timing-function: ease-in-out;
 }
 
 @keyframes fadeInFilter {
